# Emblem

./: .gitignore  .gitmodules  CMakeLists.txt  pyproject.toml  setup.py
examples/: test.py
src/: Application.cpp  Application.h  Log.cpp  Log.h  main.cpp  pymodule.cpp
src/emblem/: __init__.py
src/emblem/log/: __init__.py
